[package]
name = "bitcoin-metaprotocols-canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
candid = "0.10.14"
urlencoding = "2.1.3"
ic_principal = "0.1.1"
